# clash-convert

./: .gitignore  CHANGELOG.md  cabal.project  clash-convert.cabal  fix_doc.py  fix_docs.sh  format.sh  fourmolu.yaml
data/: collapse-instances-by-default.html
src/Clash/: Convert.hs
src/Clash/Convert/Internal/: Convert.hs  MaybeConvert.hs
tests/: Main.hs
tests/Tests/Clash/: Convert.hs  MaybeConvert.hs
tests/doctests/: Main.hs
tests/unittests/Tests/Clash/: Convert.hs  MaybeConvert.hs
