cabal-version: 3.0
name: clash-convert
version: 0.1.0.0
synopsis: Safely convert between different Clash number types
-- description:
license: BSD-2-Clause
license-file: LICENSE
author: Martijn Bastiaan
maintainer: martijn@hmbastiaan.nl
category: Development
build-type: Simple
extra-doc-files: CHANGELOG.md

common common
  ghc-options:
    -fplugin=GHC.TypeLits.Extra.Solver
    -fplugin=GHC.TypeLits.Normalise
    -Wall
    -fplugin=GHC.TypeLits.KnownNat.Solver

  default-extensions:
    DataKinds
    InstanceSigs
    MultiParamTypeClasses
    NoImplicitPrelude
    ScopedTypeVariables
    TypeApplications
    TypeOperators
    ViewPatterns

library
  import: common
  exposed-modules: Clash.Convert
  build-depends:
    base,
    clash-prelude >=1.2.0,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,

  hs-source-dirs: src
  default-language: Haskell2010

test-suite unittests
  import: common
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N

  main-is: Main.hs
  other-modules:
    Tests.Clash.Convert
    Tests.Clash.MaybeConvert

  build-depends:
    base ^>=4.20.0.0,
    clash-convert,
    clash-prelude,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    tasty,
    tasty-hunit,
    tasty-th,
